# ninja-dyndep-cppmodules

./: CMakeLists.txt  ModuleDumper.cpp  README.md
.github/workflows/: build.yaml
